--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
